@@ -33,6 +33,13 @@
 
 uint32_t monotonictime = 0;
 
+#ifdef CONFIG_OVMS_HW_SPIMEM_AGGRESSIVE
+void* operator new(std::size_t sz)
+  {
+  return ExternalRamMalloc(sz);
+  }
+#endif // #ifdef CONFIG_OVMS_HW_SPIMEM_AGGRESSIVE
+
 void* ExternalRamMalloc(std::size_t sz)
   {
   void* ret = heap_caps_malloc(sz, MALLOC_CAP_SPIRAM);
