@@ -2,6 +2,7 @@ Open Vehicle Monitor System v3 - Change log
 
 ????-??-?? ???  3.0.992  OTA release
                          - Tesla Model S basic vehicle support
+                         - Provide an option for aggressive allocation of SPI RAM (OVMS HW 3.1)
 
 2018-03-05 MWJ  3.0.991  OTA release support OTA updates over HTTP
                          - Update ovms_module to use new API for per-task heap info.
